feat: add fontFamily in themes

--- a/app.json
+++ b/app.json
@@ -16,6 +16,9 @@
       "bundleIdentifier": "com.brianfernandes.target",
       "icon": "./assets/ios-icon.png"
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ]
   }
 }
